--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    environment: release
+
     permissions:
-      contents: read
       id-token: write
 
     steps:
